--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,27 @@
 name: Deploy
+
 on:
   push:
-    branches: [ "master" ] 
+    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+
   workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      
       - uses: actions/checkout@v3
+
       - name: Setup KUBECONFIG
         uses: vbem/kubeconfig4sa@v1
         with:
-          server: ${{ secrets.KUBEAPI_SERVER }}
-          ca-base64: ${{ secrets.K85_CA_BASE64 }}
-          token: ${{ secrets.K8S_SA_TOKEN }}
-          namespace: default
-      - name: Helm Install
-        run: helm upgrade --install myapp .
+          server:     ${{ secrets.KUBEAPI_SERVER }}
+          ca-base64:  ${{ secrets.K8S_CA_BASE64 }}
+          token:      ${{ secrets.K8S_SA_TOKEN }}
+          namespace:  default
+
+      - name: Helm Install 
+        run: helm upgrade --install myapp .  
